@@ -1,8 +1,8 @@
 # Testing
 
-Use the following command to test localy
+Use the following command to test locally
 ```
-$ CHANGE=731113 NODES=cloudservices1003.wikimedia.org BUILD_NUMBER=1 PC_CONFIG=~/.config/puppet-compiler.conf python3 -m puppet_compiler.cli  --debug --force
+$ CHANGE=731113 NODES=cloudservices1003.wikimedia.org BUILD_NUMBER=1 python3 -m puppet_compiler.cli --debug --force
 ```
 Or to debug a specific host failing
 ```
@@ -11,11 +11,18 @@ $ python3 -m puppet_compiler.debug_host -c 650494 sretest1001.eqiad.wmnet
 ## Steps to create testing environment (Linux)
 The following instructions are pretty rough but should enable on to set up an
 environment that allows some local hacking.  however please keep in mind that
-theses instructions dont set up or configure the puppetdb server.  As such you
+these instructions don't set up or configure the puppetdb server.  As such you
 want be able to test code which makes uses of exported resources or puppetdb
 queries
 
-* create a $HOME/.config/puppet-compiler.conf file with the following
+* Create a `puppet-compiler.conf` file and place it in a valid configuration location. In order of precedence, this is:
+    * The path specified in the `PC_CONFIG` environment variable
+    * The current working directory
+    * `XDG_CONFIG_HOME`
+    * /etc
+
+A sample configuration file, changing `PATH_TO_REPO` for the full path to the root of the git repository:
+
 ```yaml
 base: "<PATH_TO_REPO>/.workspace/jenkins-workspace"
 puppet_src: "<PATH_TO_REPO>/.workspace/catalog-differ/production"
@@ -24,8 +31,6 @@ puppet_netbox: "<PATH_TO_REPO>/.workspace/catalog-differ/netbox-hiera"
 http_url: "http://localhost"
 puppet_var: "<PATH_TO_REPO>/.workspace/catalog-differ/puppet"
 ```
-
-Changing `PATH_TO_REPO` for the full path to the root of the gite repository.
 
 * sudo apt-get install ruby-httpclient ruby-ldap ruby-rgen ruby-multi-json puppet
 * ./utils/setup_workspace.sh
@@ -38,7 +43,7 @@ You can easily run the same tests that CI is running using the script:
 
 ## Working with cloud hosts
 
-If you would also like to test cloud hosts then you will need access to the openstack api for both the enc and custom hiera backend.  for this you will need a copy of
+If you would also like to test cloud hosts then you will need access to the openstack api for both the enc and custom hiera backend.  For this you will need a copy of
     * /usr/local/bin/puppet-enc
     * /etc/puppet-enc.yaml
 and also set up a tunnle to the cloud puppetmaster (notice the different port number used to bypass nginx)
