@@ -1,3 +1,7 @@
+## UNRELEASED
+### X.X.X
+* Add support for XDG base configuration (XDG_CONFIG_HOME)
+
 ## 2022-05-23
 ### 2.3.1
 * update populate_puppet.setup_environment to ensure repos are refreshed
